<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS Data Analysis</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="dataAnalysis_text">Data Analysis</string>
    <string name="friendBattle_text">Friend Battle</string>
    <string name="analysis_type_text">Type of Analysis</string>
    <string name="analysis_type_title">Analysis Type</string>
    <string name="scope_text">Scope of Analysis</string>
    <string name="scope_title">Scope</string>
    <string name="analyze_text">Analyze</string>
    <string name="from_text">Start Date</string>
    <string name="to_text">End Date</string>
    <string name="contacts_text">Contacts</string>
    <string name="select_contact_hint">All Contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="battle_text">Battle!</string>
    <string name="title_activity_battle_result">Battle Result</string>
    <string name="time_span">Time Span</string>
    <string name="spinner_message">Analyzing&#8230;</string>
    <string name="select_contact_title">Select Contacts</string>
    <string name="winner_photo_desc">Winner photo</string>
    <string name="contact_one">Contact One</string>
    <string name="contact_two">Contact Two</string>
    <string name="messages_received_text">Messages\n\t\t\t\tReceived</string>
    <string name="messages_sent_text">Messages\n\t\t\t\tSent</string>
    <string name="interval_received_text">Interval\n\t\tReceived</string>
    <string name="interval_sent_text">Interval\n\t\tSent</string>
    <string name="results_text">Results:</string>
    <string name="wins_text">Wins</string>
    <string name="info_dump_text">Show all results</string>
    <string name="contact_image_desc">Image of contact</string>
    <string name="select_player1_hint">Select Player 1</string>
    <string name="select_player2_hint">Select Player 2</string>
    <string name="versus">vs</string>

</resources>
