<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.androidplot.pie.PieChart
        android:id="@+id/mySimplePieChart"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        androidPlot.title="A Simple Pie Chart"
        androidPlot.titleWidget.labelPaint.textSize="@dimen/title_font_size" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/analysis_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analysis_type_text" />

        <TextView
            android:id="@+id/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_text" />

        <TextView
            android:id="@+id/end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_text" />

        <TextView
            android:id="@+id/contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_contact_hint" />

        <ScrollView
            android:id="@+id/scroll_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" >

            <TextView
                android:id="@+id/text_result"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
            </TextView>
        </ScrollView>
    </LinearLayout>

</LinearLayout>