<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/analysis_type_title"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/analysis_type_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/scope_title"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/scope_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <Spinner
                android:id="@+id/analysis_type_spinner"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:entries="@array/analaysis_type_arrays"
                android:prompt="@string/analysis_type_text"
                android:spinnerMode="dialog" />

            <Spinner
                android:id="@+id/scope_spinner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:entries="@array/scope_array"
                android:prompt="@string/scope_text"
                android:spinnerMode="dialog" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/analysis_description_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <View
                android:id="@+id/firstDivider"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray" />
        </TableRow>

        <TableRow
            android:id="@+id/advancedDatePickerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/start_date_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/from_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/end_date_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/to_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/advancedDatePickerRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                android:id="@+id/start_date_display"
                style="@android:style/Widget.DeviceDefault.Spinner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="pickStartDate"
                android:text="" />

            <TextView
                android:id="@+id/end_date_display"
                style="@android:style/Widget.DeviceDefault.Spinner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="pickEndDate"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/datePickerlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/time_span_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_span"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/datePickerRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <View
                android:id="@+id/time_span_space1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/time_span"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:entries="@array/time_span_array" />

            <View
                android:id="@+id/time_span_space2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <View
                android:id="@+id/secondDivider"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/select_contact_title"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/select_contact_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/btnSelect_contact"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="doLaunchContactPicker"
                android:text="@string/contacts_text" />
        </TableRow>

            <TableLayout
                android:id="@+id/contactTable"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
            </TableLayout>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnAnalyze"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:onClick="analyze"
                android:text="@string/analyze_text" />

            <View
                android:layout_width="0dp"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>

</ScrollView>